# medical-rag-ai-agent-gcp

./: .gitignore  Dockerfile  Jenkinsfile  main.py  pyproject.toml  readme.md
app/: application.py
app/common/: logger.py
app/components/: agent.py  data_loader.py  embeddings.py
app/config/: config.py
app/templates/: index.html
custom_jenkins/: Dockerfile
